Fix the arguments passed to the LLVM dylib https://bugs.webkit.org/show_bug.cgi?id=133757

Patch by Juergen Ributzka <juergen@apple.com> on 2014-06-16
Reviewed by Geoffrey Garen.

The LLVM command line argument parser assumes that the first argument
is the program name. We need to add a fake program name, otherwise the
first argument will be parsed as program name and ignored.

* llvm/library/LLVMExports.cpp:
(initializeAndGetJSCLLVMAPI):

Canonical link: https://commits.webkit.org/151893@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170020 268f45cc-cd09-0410-ab3c-d52691b4dbfc